that version should work
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/branches/06-02-dwetzel@24865 72102866-910b-0410-8b05-ffd578937521

--- a/GSWAdaptors/Apache2/configure.ac
+++ b/GSWAdaptors/Apache2/configure.ac
@@ -25,7 +25,7 @@
 # 02111-1307, USA. 
 #
 AC_INIT
-AC_CONFIG_SRCDIR([mod_gsweb.c])
+AC_CONFIG_SRCDIR([mod_gsw.c])
 AC_CANONICAL_TARGET([])
 
 BIN_PATH=$PATH:/usr/local/sbin:/usr/apache/sbin:/usr/sbin:/usr/pkg/sbin
