fix double text field, update documentation allow compilation with TCSDB
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@25034 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/GNUmakefile
+++ b/Examples/hello/GNUmakefile
@@ -47,3 +47,8 @@ DIST_FILES = $(SRCS) $(HDRS) GNUmakefile Makefile.postamble Makefile.preamble
 include $(GNUSTEP_MAKEFILES)/gswapp.make
 
 -include Makefile.postamble
+
+# enable this for TCSimpleDB
+#ADDITIONAL_TOOL_LIBS += -lTCSimpleDB 
+#ADDITIONAL_OBJCFLAGS += -DTCSDB
+
