* GSWeb.framework/GSWImageInfo.h/m: New files. 	* GSWeb.framework/GNUmakefile: Include new files. 	* GSWeb.framework/GSWWOCompatibility.h: Include new files.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@28179 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -142,6 +142,7 @@ GSWHiddenField.m \
 GSWHyperlink.m \
 GSWImage.m \
 GSWImageButton.m \
+GSWImageInfo.m \
 GSWJavaScript.m \
 GSWNestedList.m \
 GSWParam.m \
@@ -256,6 +257,7 @@ GSWHiddenField.h \
 GSWHyperlink.h \
 GSWImage.h \
 GSWImageButton.h \
+GSWImageInfo.h \
 GSWInput.h \
 GSWJavaScript.h \
 GSWKeyValueAssociation.h \
