* configure.ac: Add check for zlib and libpng.  Do not clobber LIBS 	and AUX_LIBS for libwrap check. 	* configure: Regenerate. 	* config.h.in (HAVE_LIBZ,HAVE_ZLIB): Update autoconf test to canonical 	name. 	(HAVE_LIBPNG): Add new test for libpng. 	* GSWeb.framework/GSWPngImageInfo.h/m: New files. 	* GSWeb.framework/GSWeb.h (GSWPngImageInfo): Add declaration and include. 	* GSWeb.framework/GNUmakefile (GSWPngImageInfo.h/m): Add files. 	* GSWeb.framework/GSWImageInfo.m (GSWPngImageInfo): Remove reference to 	class. 	* GSWeb.framework/GSWResponse.m (HAVE_LIBZ,HAVE_ZLIB): Update references. 	* GSWeb.framework/NSData+Compress.h/m (HAVE_LIBZ,HAVE_ZLIB): Ditto.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@28183 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -143,6 +143,7 @@ GSWHyperlink.m \
 GSWImage.m \
 GSWImageButton.m \
 GSWImageInfo.m \
+GSWPngImageInfo.m \
 GSWJavaScript.m \
 GSWNestedList.m \
 GSWParam.m \
@@ -258,6 +259,7 @@ GSWHyperlink.h \
 GSWImage.h \
 GSWImageButton.h \
 GSWImageInfo.h \
+GSWPngImageInfo.h \
 GSWInput.h \
 GSWJavaScript.h \
 GSWKeyValueAssociation.h \
