--- a/GSWAdaptors/Apache2/GNUmakefile.in
+++ b/GSWAdaptors/Apache2/GNUmakefile.in
@@ -103,7 +103,7 @@ GSW_LDFLAGS = \
 # We currently include the CPPFLAGS in the CFLAGS so the
 # common makefiles still work.
 comma:=,
-CFLAGS  = $(GSW_CPPFLAGS)
+CFLAGS  = $(GSW_CPPFLAGS) -g
 CFLAGS += $(addprefix -Wc$(comma),$(GSW_CFLAGS))
 LDFLAGS = $(addprefix -Wl$(comma),$(GSW_LDFLAGS))
 
