* Many warnings fixed. * Removed GDL dependency. * NSKeyValueCoding is now MacOS X compatible.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30172 72102866-910b-0410-8b05-ffd578937521

--- a/config.mak.in
+++ b/config.mak.in
@@ -2,14 +2,14 @@
 #
 #
 DYNAMIC_LINKER=simple
-GDL2=@GDL2@
+#GDL2=@GDL2@
 AUX_LIBS=@AUX_LIBS@
 
 #EOControl dependancy
-ifeq ($(GDL2),yes)
-EOCONTROL_LIBRARY_NAME=EOControl
-EOACCESS_LIBRARY_NAME=EOAccess
-endif
+#ifeq ($(GDL2),yes)
+#EOCONTROL_LIBRARY_NAME=EOControl
+#EOACCESS_LIBRARY_NAME=EOAccess
+#endif
 
 #Native Framework support
 ifeq ($(OBJC_RUNTIME_LIB),apple)
