* config.h.in   changed RCS_ID to avoid warnings
* GSWeb.framework/WebObjects/WebObjects.h
* GSWeb.framework/WebObjects/WebObjects.h
  check if GSWEB_WONAMES was defined before

* GSWeb.framework/GSWResponse.m
  fix typo

* GSWeb.framework/GSWDeclarationParser.m
  remove non-existing header file



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30570 72102866-910b-0410-8b05-ffd578937521

--- a/config.h.in
+++ b/config.h.in
@@ -31,7 +31,7 @@
 #undef HAVE_GDL2
 
 #define RCS_ID(name) \
-        static const char rcsId[] = name; \
-        static const char *__rcsId_hack() {__rcsId_hack(); return rcsId;}
+	static const char RCSID[] = name; \
+	static inline const char *getGswRCSID() { if (0) getGswRCSID(); return RCSID;}
 
 #endif
