* Examples/hello/GNUmakefile check for platform and use frameworks or libs
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30571 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/GNUmakefile
+++ b/Examples/hello/GNUmakefile
@@ -42,11 +42,11 @@ HDRS =
 
 DIST_FILES = $(SRCS) $(HDRS) GNUmakefile Makefile.postamble Makefile.preamble
 
-
+ifneq ($(FOUNDATION_LIB),gnu)
 AUXILIARY_GSW_LIBS = -framework WebObjects -framework WOExtensions
-#else
-#AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions
-#endif
+else
+AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions
+endif
 
 
 -include Makefile.preamble
