* GSWDatabase/WODisplayGroup.m compiles without warning cleanup, removed logs, added exceptions * GSWDatabase/WODisplayGroup.h cleanup includes * Examples/WebBookStore1/Main.m removed create and drop tables. * Examples/WebBookStore1/WebBookStore1_main.m adapt to WO naming * Examples/WebBookStore1/Main.gswc -> Main.wo * Examples/WebBookStore1/GNUmakefile updated * Examples/WebBookStore1/Application.h * Examples/WebBookStore1/DirectAction.h * Examples/WebBookStore1/DirectAction.m * Examples/WebBookStore1/Session.h * Examples/WebBookStore1/Main.h WO naming * Examples/WebBookStore1/README new file * Examples/WebBookStore1/BookStore.eomodeld/index.eomodeld added more sample data to connection dictionary * GNUmakefile add GSWDatabase to main project makefile
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30643 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/WebBookStore1/GNUmakefile
+++ b/Examples/WebBookStore1/GNUmakefile
@@ -38,7 +38,23 @@ WebBookStore1_RESOURCE_FILES = BookStore.eomodeld
 WebBookStore1_WEBSERVER_RESOURCE_FILES = Insert.png Delete.png Save.png \
 	CreateTables.png DropTables.png
 
-WebBookStore1_COMPONENTS = Main.gswc
+WebBookStore1_COMPONENTS = Main.wo
+
+SRCS = $(GSWAPP_NAME:=.m)
+
+HDRS =
+
+DIST_FILES = $(SRCS) $(HDRS) GNUmakefile Makefile.postamble Makefile.preamble
+
+ifneq ($(FOUNDATION_LIB),gnu)
+AUXILIARY_GSW_LIBS = -framework WebObjects -framework WOExtensions \
+	-framework GSWDatabase -framework EOAccess -framework EOControl \
+        -framework PostgreSQLEOAdaptor
+else
+AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions -lGSWDatabase -lEOAccess \
+	-lEOControl
+endif
+
 
 -include Makefile.preamble
 
