* GSWeb.framework/GNUmakefile * GSWeb.framework/WOKeyValueUnarchiver.m/h add WOKeyValueUnarchiver * GSWeb.framework/GSWComponentDefinition.m add check, reformat * GSWeb.framework/GSWBundle.m add WOKeyValueUnarchiver initializeObject: fromArchive: use WOKeyValueUnarchiver to create objects * GSWeb.framework/GSWComponent.m validateTakeValue:forKeyPath: fix path problem on multiple "." like foo.bar.test add unarchiver: objectForReference: * Examples/WebBookStore1/Main.wo/Main.woo fix class of authorDG WODisplayGroup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30647 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb.framework/GNUmakefile
+++ b/GSWeb.framework/GNUmakefile
@@ -193,7 +193,8 @@ GSWRecording.m \
 GSWInputStreamData.m \
 GSWActionURL.m \
 GSWWorkerThread.m \
-NSObject+XML.m
+NSObject+XML.m \
+WOKeyValueUnarchiver.m
 
 #For next Version:
 #GSWAdminAction.m \
@@ -324,7 +325,8 @@ GSWActionURL.h \
 GSWDefines.h \
 GSWHTTPIO.h \
 GSWPrivate.h \
-NSObject+XML.h
+NSObject+XML.h \
+WOKeyValueUnarchiver.h
 
 #For next Version:
 #GSWAdminAction.h \
