* GSWeb/GSWDeployedBundle.m remove local NSAutoreleasePool * configure.ac GSWeb.framework -> GSWeb * configure regenerate
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30699 72102866-910b-0410-8b05-ffd578937521

--- a/configure.ac
+++ b/configure.ac
@@ -157,5 +157,5 @@ AC_SUBST(AUX_LIBS)
 #--------------------------------------------------------------------
 # Write the Makefiles
 #--------------------------------------------------------------------
-AC_CONFIG_FILES([config.mak gsweb.make GSWeb.framework/Makefile.preamble])
+AC_CONFIG_FILES([config.mak gsweb.make GSWeb/Makefile.preamble])
 AC_OUTPUT
