* GSWeb/Resources/languages.plist add more languages * GSWeb/GSWHyperlink.m _appendQueryStringToResponse:inContext:requestHandlerPath:htmlEscapeURL: use encodeAsCGIFormValuesEscapeAmpersand: not encodeAsCGIFormValues appendAttributesToResponse:inContext: use _appendQueryStringToResponse:inContext:requestHandlerPath:htmlEscapeURL: not _appendQueryStringToResponse:inContext: * GSWeb/GSWSession.m do not dealloc _autoreleasePool in dealloc This seems to fix * GSWeb/NSDictionary+HTML.h * GSWeb/NSDictionary+HTML.m fix typo in method name encodeAsCGIFormValuesEscapeAmpersand * GSWeb/GSWActionURL.m use _appendQueryStringToResponse:inContext:requestHandlerPath:htmlEscapeURL: not _appendQueryStringToResponse:inContext: * GSWeb/GSWDynamicURLString.m disable NSLog * GSWeb/GSWSessionStore.m _checkInSessionForContext: enable [session _releaseAutoreleasePool] add comment
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30764 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb/Resources/languages.plist
+++ b/GSWeb/Resources/languages.plist
@@ -1,26 +1,158 @@
 {
-	"FR" = "French";
-	"FR-FR" = "French";
-	"fr-ca" = "French";
-	"EN" = "English";
+	"de-at" = "German";
+	"de-ch" = "German";
+	"de-de" = "German";
+	"de-li" = "German";
+	"de-lu" = "German";
+	"en-ca" = "English";
 	"en-en" = "English";
 	"en-us" = "English";
-	"en-ca" = "English";
-	"ES" = "Spanish";
-	"DE-DE" = "German";
-	"DE-AT" = "German";
-	"DE" = "German";
-	"de-ch" = "German";
-	"de-lu" = "German";
-	"de-li" = "German";
-	"nl" = "Dutch";
-	"it" = "Italian";
-	"ja" = "Japanese";
-	"ko" = "Korean";
-	"pl" = "Polish";
-	"ro" = "Romanian";
+	"fr-ca" = "French";
+	"fr-fr" = "French";
 	"zh-cn" = "Chinese";
-	"zh-tw" = "Chinese";
 	"zh-sg" = "Chinese";
-	"cz" = "Czech";
+	"zh-tw" = "Chinese";
+	
+	"aa" = "Afar";
+    "ab" = "Abkhazian";
+    "af" = "Afrikaans";
+    "am" = "Amharic";
+    "ar" = "Arabic";
+    "as" = "Assamese";
+    "ay" = "Aymara";
+    "az" = "Azerbaijani";
+    "ba" = "Bashkir";
+    "be" = "Byelorussian";
+    "bg" = "Bulgarian";
+    "bh" = "Bihari";
+    "bi" = "Bislama";
+    "bn" = "Bengali";
+    "bo" = "Tibetan";
+    "br" = "Breton";
+    "ca" = "Catalan";
+    "co" = "Corsican";
+    "cs" = "Czech";
+    "cy" = "Welsh";
+    "da" = "Danish";
+    "de" = "German";
+    "dz" = "Bhutani";
+    "el" = "Greek";
+    "en" = "English";
+    "eo" = "Esperanto";
+    "es" = "Spanish";
+    "et" = "Estonian";
+    "eu" = "Basque";
+    "fa" = "Persian";
+    "fi" = "Finnish";
+    "fj" = "Fiji";
+    "fo" = "Faeroese";
+    "fr" = "French";
+    "fy" = "Frisian";
+    "ga" = "Irish";
+    "gd" = "ScotsGaelic";
+    "gl" = "Galician";
+    "gn" = "Guarani";
+    "gu" = "Gujarati";
+    "ha" = "Hausa";
+    "he" = "Hebrew";
+    "hi" = "Hindi";
+    "hr" = "Croatian";
+    "hu" = "Hungarian";
+    "hy" = "Armenian";
+    "ia" = "Interlingua";
+    "id" = "Indonesian";
+    "ie" = "Interlingue";
+    "ik" = "Inupiak";
+    "in" = "Indonesian";
+    "is" = "Icelandic";
+    "it" = "Italian";
+    "iu" = "Inuktitut";
+    "iw" = "Hebrew";
+    "ja" = "Japanese";
+    "ji" = "Yiddish";
+    "jw" = "Javanese";
+    "ka" = "Georgian";
+    "kk" = "Kazakh";
+    "kl" = "Greenlandic";
+    "km" = "Cambodian";
+    "kn" = "Kannada";
+    "ko" = "Korean";
+    "ks" = "Kashmiri";
+    "ku" = "Kurdish";
+    "ky" = "Kirghiz";
+    "la" = "Latin";
+    "ln" = "Lingala";
+    "lo" = "Laothian";
+    "lt" = "Lithuanian";
+    "lv" = "Latvian";
+    "mg" = "Malagasy";
+    "mi" = "Maori";
+    "mk" = "Macedonian";
+    "ml" = "Malayalam";
+    "mn" = "Mongolian";
+    "mo" = "Moldavian";
+    "mr" = "Marathi";
+    "ms" = "Malay";
+    "mt" = "Maltese";
+    "my" = "Burmese";
+    "na" = "Nauru";
+    "ne" = "Nepali";
+    "nl" = "Dutch";
+    "no" = "Norwegian";
+    "oc" = "Occitan";
+    "om" = "Oromo";
+    "or" = "Oriya";
+    "pa" = "Punjabi";
+    "pl" = "Polish";
+    "ps" = "Pashto";
+    "pt" = "Portuguese";
+    "qu" = "Quechua";
+    "rm" = "RhaetoRomance";
+    "rn" = "Kirundi";
+    "ro" = "Romanian";
+    "ru" = "Russian";
+    "rw" = "Kinyarwanda";
+    "sa" = "Sanskrit";
+    "sd" = "Sindhi";
+    "sg" = "Sangro";
+    "sh" = "SerboCroatian";
+    "si" = "Singhalese";
+    "sk" = "Slovak";
+    "sl" = "Slovenian";
+    "sm" = "Samoan";
+    "sn" = "Shona";
+    "so" = "Somali";
+    "sq" = "Albanian";
+    "sr" = "Serbian";
+    "ss" = "Siswati";
+    "st" = "Sesotho";
+    "su" = "Sundanese";
+    "sv" = "Swedish";
+    "sw" = "Swahili";
+    "ta" = "Tamil";
+    "te" = "Tegulu";
+    "tg" = "Tajik";
+    "th" = "Thai";
+    "ti" = "Tigrinya";
+    "tk" = "Turkmen";
+    "tl" = "Tagalog";
+    "tn" = "Setswana";
+    "to" = "Tonga";
+    "tr" = "Turkish";
+    "ts" = "Tsonga";
+    "tt" = "Tatar";
+    "tw" = "Twi";
+    "ug" = "Uigur";
+    "uk" = "Ukrainian";
+    "ur" = "Urdu";
+    "uz" = "Uzbek";
+    "vi" = "Vietnamese";
+    "vo" = "Volapuk";
+    "wo" = "Wolof";
+    "xh" = "Xhosa";
+    "yi" = "Yiddish";
+    "yo" = "Yoruba";
+    "za" = "Zhuang";
+    "zh" = "Chinese";
+    "zu" = "Zulu";
 }
