--- a/GSWeb/Resources/MIME.plist
+++ b/GSWeb/Resources/MIME.plist
@@ -12,6 +12,7 @@
     "tif" = "image/tiff";
     "tiff" = "image/tiff";
     "jpeg" = "image/jpeg";
+    "svg"  = "image/svg+xml";
 
     // Audio types
     "au" = "audio/basic";
