* GSWExtensions/Resources/Info-gnustep.plist * GSWExtensions/GNUmakefile fix framework name to be able to load files from the right bundle
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30823 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions/GNUmakefile
+++ b/GSWExtensions/GNUmakefile
@@ -31,13 +31,14 @@ srcdir = .
 
 # Options
 ifeq ($(gswnames), gsw)
-FRAMEWORK_NAME = GSWExtensions
+#FRAMEWORK_NAME = GSWExtensions
+FRAMEWORK_NAME = WOExtensions
 endif
 ifeq ($(gswnames), wo)
 FRAMEWORK_NAME = WOExtensions
 endif
 ifeq ($(gswnames), all)
-FRAMEWORK_NAME = GSWExtensions WOExtensions
+FRAMEWORK_NAME = WOExtensions
 endif
 
 # Ensure that each framework uses its own GNUSTEP_OBJ_DIR_NAME & DERIVED_SRC
