--- a/GSWExtensions/Resources/Info-gnustep.plist
+++ b/GSWExtensions/Resources/Info-gnustep.plist
@@ -1,6 +1,6 @@
 {
   NOTE = "Automatically generated, do not edit!";
-  NSExecutable = "GSWExtensions";
-  NSPrincipalClass = "GSWExtensions";
+  NSExecutable = "WOExtensions";
+  NSPrincipalClass = "WOExtensions";
   HasGSWComponents = "YES";
 }
