* GSWExtensions/Resources/Info-gnustep.plist delete * GSWExtensions/GNUmakefile let makefiles generate Info-gnustep.plist
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30825 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions/GNUmakefile
+++ b/GSWExtensions/GNUmakefile
@@ -48,12 +48,7 @@ DERIVED_SRC := $(DERIVED_SRC)/$(GNUSTEP_INSTANCE)
 endif
 
 WOExtensions_CPPFLAGS = -DGSWEB_WONAMES
-
-# The framework resource files and directories
-GSWExtensions_RESOURCE_FILES = \
-Resources/Info-gnustep.plist \
-
-WOExtensions_RESOURCE_FILES = $(GSWExtensions_RESOURCE_FILES)
+WOExtensions_HAS_GSWCOMPONENTS=YES
 
 Extensions_COMPONENTS = \
 SessionCreationErrorPage \
