* added GSWeb/GSWApplication+Defaults.h * GSWeb/GNUmakefile: use -Werror * GSWeb/GSWFileUpload.* added multiple file support * Testing/DynamicElements/FileUpload1Page.wo added multiple file support * GSWeb/* fixed warnings on Mountain Lion
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36200 72102866-910b-0410-8b05-ffd578937521

--- a/GSWeb/GNUmakefile
+++ b/GSWeb/GNUmakefile
@@ -397,6 +397,6 @@ ifeq ($(doc),yes)
 include $(GNUSTEP_MAKEFILES)/documentation.make
 endif
 
-ADDITIONAL_OBJCFLAGS = -Werror-implicit-function-declaration
+ADDITIONAL_OBJCFLAGS = -Werror-implicit-function-declaration -Werror 
 
 -include Makefile.postamble
