* configure.ac * GSWeb/GSWUtils.m * GSWeb/GSWApplication+Defaults.m * GSWeb/GSWHTTPIO.m
Fixed for non-Apple platforms, patch from Sebastian Reitenbach.



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@36230 72102866-910b-0410-8b05-ffd578937521

--- a/configure.ac
+++ b/configure.ac
@@ -133,6 +133,12 @@ AC_ARG_ENABLE(png,
   enable_png=yes)
 
 if test $enable_png = yes; then
+
+  PNG_CPPFLAGS="`pkg-config --cflags libpng`"
+  CPPFLAGS="$CPPFLAGS $PNG_CPPFLAGS"
+  AUX_INCS="$AUX_INCS $PNG_CPPFLAGS"
+  AC_CHECK_HEADER(png.h, [], [], [])
+
   AC_CHECK_LIB(png, png_sig_cmp)
 fi
 
