Bug fixes. See ChangeLog
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37795 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions/GNUmakefile
+++ b/GSWExtensions/GNUmakefile
@@ -31,8 +31,8 @@ srcdir = .
 
 # Options
 ifeq ($(gswnames), gsw)
-#FRAMEWORK_NAME = GSWExtensions
-FRAMEWORK_NAME = WOExtensions
+FRAMEWORK_NAME = GSWExtensions
+#FRAMEWORK_NAME = WOExtensions
 endif
 ifeq ($(gswnames), wo)
 FRAMEWORK_NAME = WOExtensions
