* GSWeb/GSWAjaxRequestHandler.*       new files     * GSWeb/GNUmakefile       add GSWAjaxRequestHandler.*, WOAjaxRequestHandler.h     * GSWeb/GSWApplication+Defaults.*       add AjaxRequestHanderKey     * GSWeb/GSWApplication.h       add +ajaxRequestHandlerKey       add +setAjaxRequestHandlerKey:     * GSWeb/GSWApplication.m       create ajax request handler in registerRequestHandlers     * GSWeb/GSWComponentRequestHandler.m       return current class instance in +handler (works in subclasses too..)     * GSWConstants.*       added ajax     * GSWContext.*       added +shouldNotStorePageInBacktrackCache     * GSWeb/GSWMessage.*       added storePageInBacktrackCache     * GSWeb/GSWRequest.*       added -isAjaxSubmit, ajaxFormSubmitKey     * GSWeb/GSWSession.m     * GSWeb/GSWeb.h     * GSWeb/GSWWOCompatibility.h       ajax adjustments

--- a/GSWeb/GNUmakefile
+++ b/GSWeb/GNUmakefile
@@ -122,6 +122,7 @@ GSWDefaultAdaptor.m \
 GSWUtils.m \
 GSWClientSideScript.m \
 GSWActiveImage.m \
+GSWAjaxRequestHandler.m \
 GSWBody.m \
 GSWTextField.m \
 GSWForm.m \
@@ -213,6 +214,7 @@ GSWeb_HEADER_FILES = \
 GSWeb.h \
 GSWActiveImage.h \
 GSWAdaptor.h \
+GSWAjaxRequestHandler.h \
 GSWApplet.h \
 GSWApplication.h \
 GSWAssociation.h \
@@ -350,6 +352,7 @@ WO_HEADER_FILES = \
 	WOMailDelivery.h \
 	WORequest.h \
 	WORequestHandler.h \
+    WOAjaxRequestHandler.h \
 	WOResourceManager.h \
 	WOResponse.h \
 	WOSession.h \
