* GSWDatabase/WODisplayGroup.m       fix format string and NSArray / NSMutableArray bugs     * GSWeb/GNUmakefile     * GSWeb/GSWApplication.h     * GSWeb/GSWApplication.m       replace GSWMultiKeyDictionary with GSWDictionary     * GSWeb/GSWDefaultAdaptor.m       limit _workerThreadCountMax to 16 for now     * GSWeb/GSWDeployedBundle.*, GSWResourceManager.*       replace GSWMultiKeyDictionary with GSWDictionary     * GSWeb/GSWDictionary       new class using NSMutableDictionary internally.     * GSWeb/GSWImageInfo.m       fix leak     * GSWeb/GSWRequest.m       fix leak     * GSWeb/GSWUtils.m       fix leak     * GSWeb/GSWWOCompatibility.h       remove GSWMultiKeyDictionary     * GSWeb/GSWWorkerThread.m       some cleanups but still does not run in MT on FreeBSD.     * GSWeb/NSString+Trimming.m       fix leaks     * Tests/gsweb/GNUmakefile.postamble     * Tests/gsweb/GNUmakefile.super     * Tests/gsweb/GSWDictionary/TestInfo     * Tests/gsweb/GSWDictionary/general.m       new files

--- a/GSWeb/GNUmakefile
+++ b/GSWeb/GNUmakefile
@@ -79,6 +79,7 @@ WebObjects_RESOURCE_DIRS = $(GSWeb_RESOURCE_DIRS)
 
 # The Bundle Objective-C source files to be compiled
 GSWeb_OBJC_FILES = \
+GSWDictionary.m \
 GSWDebug.m \
 GSWConstants.m \
 GSWTemporaryElement.m \
@@ -106,7 +107,6 @@ GSWApplication+Defaults.m \
 GSWAssociation.m \
 GSWComponent.m \
 GSWContext.m \
-GSWMultiKeyDictionary.m \
 GSWDynamicElement.m \
 GSWDynamicGroup.m \
 GSWElement.m \
@@ -211,6 +211,7 @@ WebObjects_OBJC_FILES = $(GSWeb_OBJC_FILES)
 
 # The framework installed header files
 GSWeb_HEADER_FILES = \
+GSWDictionary.h \
 GSWeb.h \
 GSWActiveImage.h \
 GSWAdaptor.h \
@@ -266,7 +267,6 @@ GSWInput.h \
 GSWJavaScript.h \
 GSWKeyValueAssociation.h \
 GSWMailDelivery.h \
-GSWMultiKeyDictionary.h \
 GSWNestedList.h \
 GSWTemporaryElement.h \
 GSWBaseParser.h \
