* gsweb.make.in     * GNUmakefile       remove GSWExtensionsGSW as this is depricated now.     * GSWeb/GSWDefaultAdaptor.m       added retain/autorelease     * GSWUtils.m       removed category on NSUserDefaults     * GSWDefaultAdaptor.m       removed _workerThreadCountMax = 16

--- a/gsweb.make.in
+++ b/gsweb.make.in
@@ -29,7 +29,7 @@ GSWEB_MINOR_VERSION = @MINOR_VERSION@
 GSWEB_SUBMINOR_VERSION = @SUBMINOR_VERSION@
 
 ifeq ($(GSW_NAMES),wo)
-  AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions -lWOExtensionsGSW
+  AUXILIARY_GSW_LIBS += -lWebObjects -lWOExtensions 
 else
 #  AUXILIARY_GSW_LIBS += -lGSWeb -lGSWExtensions -lGSWExtensionsGSW
 endif
