Various fixes for errors in documentation generation

--- a/GSWExtensions/GNUmakefile
+++ b/GSWExtensions/GNUmakefile
@@ -197,15 +197,21 @@ GSWExtensions_AGSDOC_FILES = gswextensions.gsdoc \
 	$(GSWExtensions_AUTOGSDOC_HEADERS) 
 #$(GSWExtensions_AUTOGSDOC_SOURCE)
 GSWExtensions_AGSDOC_FLAGS = \
-	-Declared Foundation \
+        -Declared WebObjects \
 	-Standards YES \
 	-Project gswextensions \
 	-WordMap '{\
-	FOUNDATION_EXPORT=extern;FOUNDATION_STATIC_INLINE="";\
-	GS_GEOM_SCOPE=extern;GS_GEOM_ATTR="";\
-	GS_EXPORT=extern;GS_DECLARE="";\
-	GS_RANGE_SCOPE=extern;GS_RANGE_ATTR="";\
-	GS_ZONE_SCOPE=extern;GS_ZONE_ATTR="";\
+	FOUNDATION_EXPORT=extern;\
+	FOUNDATION_STATIC_INLINE="";\
+	GS_DECLARE="";\
+	GS_EXPORT=extern;\
+	GS_GEOM_ATTR="";\
+	GS_GEOM_SCOPE=extern;\
+	GS_RANGE_ATTR="";\
+	GS_RANGE_SCOPE=extern;\
+	GS_ZONE_ATTR="";\
+	GS_ZONE_SCOPE=extern;\
+	GSWEB_EXPORT="";\
 	}' -Up gswextensions
 
 #	-SystemProjects System \
