--- a/GSWeb/GNUmakefile
+++ b/GSWeb/GNUmakefile
@@ -378,16 +378,21 @@ GSWeb_AUTOGSDOC_SOURCE = $(GSWeb_OBJC_FILES)
 GSWeb_AGSDOC_FILES = gsweb.gsdoc $(GSWeb_AUTOGSDOC_HEADERS) 
 
 GSWeb_AGSDOC_FLAGS = \
-	-Declared Foundation \
+        -Declared WebObjects \
 	-Standards YES \
-	-SystemProjects System \
 	-Project gsweb \
 	-WordMap '{\
-	FOUNDATION_EXPORT=extern;FOUNDATION_STATIC_INLINE="";\
-	GS_GEOM_SCOPE=extern;GS_GEOM_ATTR="";\
-	GS_EXPORT=extern;GS_DECLARE="";\
-	GS_RANGE_SCOPE=extern;GS_RANGE_ATTR="";\
-	GS_ZONE_SCOPE=extern;GS_ZONE_ATTR="";\
+	FOUNDATION_EXPORT=extern;\
+	FOUNDATION_STATIC_INLINE="";\
+	GS_DECLARE="";\
+	GS_EXPORT=extern;\
+	GS_GEOM_ATTR="";\
+	GS_GEOM_SCOPE=extern;\
+	GS_RANGE_ATTR="";\
+	GS_RANGE_SCOPE=extern;\
+	GS_ZONE_ATTR="";\
+	GS_ZONE_SCOPE=extern;\
+	GSWEB_EXPORT="";\
 	}' -Up gsweb
 
 -include Makefile.preamble
