--- a/GSWExtensionsGSW/GNUmakefile
+++ b/GSWExtensionsGSW/GNUmakefile
@@ -115,15 +115,21 @@ GSWExtensionsGSW_AGSDOC_FILES = \
 
 #$(GSWExtensionsGSW_AUTOGSDOC_SOURCE)
 GSWExtensionsGSW_AGSDOC_FLAGS = \
-	-Declared Foundation \
+        -Declared WebObjects \
 	-Standards YES \
 	-Project gswextensionsgsw \
 	-WordMap '{\
-	FOUNDATION_EXPORT=extern;FOUNDATION_STATIC_INLINE="";\
-	GS_GEOM_SCOPE=extern;GS_GEOM_ATTR="";\
-	GS_EXPORT=extern;GS_DECLARE="";\
-	GS_RANGE_SCOPE=extern;GS_RANGE_ATTR="";\
-	GS_ZONE_SCOPE=extern;GS_ZONE_ATTR="";\
+	FOUNDATION_EXPORT=extern;\
+	FOUNDATION_STATIC_INLINE="";\
+	GS_DECLARE="";\
+	GS_EXPORT=extern;\
+	GS_GEOM_ATTR="";\
+	GS_GEOM_SCOPE=extern;\
+	GS_RANGE_ATTR="";\
+	GS_RANGE_SCOPE=extern;\
+	GS_ZONE_ATTR="";\
+	GS_ZONE_SCOPE=extern;\
+	GSWEB_EXPORT="";\
 	}' -Up gswextensionsgsw
 
 #	-SystemProjects System \
