--- a/GSWeb/GNUmakefile
+++ b/GSWeb/GNUmakefile
@@ -376,6 +376,7 @@ DOCUMENT_NAME = GSWeb
 GSWeb_AUTOGSDOC_HEADERS = $(GSWeb_HEADER_FILES)
 GSWeb_AUTOGSDOC_SOURCE = $(GSWeb_OBJC_FILES)
 GSWeb_AGSDOC_FILES = gsweb.gsdoc $(GSWeb_AUTOGSDOC_HEADERS) 
+GSWeb_ADSDOC_INSTALL_BUNDLE = GNUstepWeb
 
 GSWeb_AGSDOC_FLAGS = \
         -Declared WebObjects \
